{
    "name": "KUBIKAInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "2b45168a-7735-4b16-8485-98cc67495dbb",
            "actions": [
                {
                    "name": "TouchScreen",
                    "type": "Button",
                    "id": "d5a236da-3a5b-4728-9ba7-dd1590d3c7f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SwipeScreen",
                    "type": "Value",
                    "id": "b4a7f368-efcf-4ccb-96bc-796cda4b2745",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HoldScreen",
                    "type": "PassThrough",
                    "id": "d7ea33c5-5232-49f5-b65a-0b0b3c87ca4c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Hold(duration=0.1)"
                },
                {
                    "name": "RotateCamera",
                    "type": "PassThrough",
                    "id": "16e5953c-cb41-4f0c-8fa7-d3418edf2cf3",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9a2e5a76-1b09-4ac0-b4cb-c83ecdc3163f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Composite;Keyboard&Mouse",
                    "action": "SwipeScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4e91fe9-6ded-4d29-921f-18d992c3450e",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch;Composite",
                    "action": "SwipeScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2124d13f-5837-4450-9ee0-b30965ad26fb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=0.1)",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Composite",
                    "action": "HoldScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ca84b82-ca0c-4385-90c6-e30c7d76a3d9",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch;Composite",
                    "action": "HoldScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a437b9fe-af23-4a6f-9d9d-30d6954cca78",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse;Composite",
                    "action": "TouchScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1aa01c4-fc44-40b8-b8a6-77e770a57007",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch;Composite",
                    "action": "TouchScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "764947f7-7c82-4fe4-b2a3-d863f6a793c3",
                    "path": "<Touchscreen>/primaryTouch/startPosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch;Composite",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Composite",
            "bindingGroup": "Composite",
            "devices": [
                {
                    "devicePath": "<Pointer>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}